fix: PM2-3361 BP explorer nowRowMessage alignment (#712)

--- a/src/components/styles/_theme-overrides.scss
+++ b/src/components/styles/_theme-overrides.scss
@@ -2464,6 +2464,9 @@ p.MuiTypography-root.MuiTypography-body3.description,
 .bpx-section {
   .cx-table__page-loading .MuiDataGrid-virtualScroller {
     min-height: 50px !important;
+    .MuiDataGrid-overlayWrapper  {
+      top: 0 !important;
+    }
   }
 }
 
